Fix layout issues in dashboard sidebar

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2645,9 +2645,9 @@ label[for] {
     right: 0;
     top: 0;
     bottom: 0;
-    overflow: hidden;
+    overflow: hidden auto;
 
-    /* padding: 20px 18px 20px 0; */
+    padding: 0 10px;
     text-align: left;
     background-color: #3f4652;
 }
