--- a/public/css/ndDesigner.css
+++ b/public/css/ndDesigner.css
@@ -353,7 +353,6 @@ section {
 }
 
 .gallery {
-    width: calc(100% + 6px);
     list-style: none;
 }
 
